@@ -32,6 +32,7 @@
     <p>Various features:</p>
     
     <ul>
+      <li><a href="symbols.html">Using other symbols than circles for points</a> (with symbol plugin)</li>
       <li><a href="time.html">Plotting time series</a> and <a href="visitors.html">visitors per day with zooming and weekends</a> (with selection plugin)</li>
       <li><a href="multiple-axes.html">Multiple axes</a> and <a href="interacting-axes.html">interacting with the axes</a></li>
       <li><a href="thresholding.html">Thresholding the data</a> (with threshold plugin)</li>
@@ -39,7 +40,7 @@
       <li><a href="percentiles.html">Using filled areas to plot percentiles</a> (with fillbetween plugin)</li>
       <li><a href="tracking.html">Tracking curves with crosshair</a> (with crosshair plugin)</li>
       <li><a href="image.html">Plotting prerendered images</a> (with image plugin)</li>
-	  <li><a href="pie.html">Pie charts</a> (with pie plugin)</li>
+      <li><a href="pie.html">Pie charts</a> (with pie plugin)</li>
     </ul>
  </body>
 </html>
