@@ -64,6 +64,9 @@ Changes:
   ensure that they appear next to each other rather than in between,
   at the expense of possibly awkward tick steps (sponsored by Flight
   Data Services, www.flightdataservices.com).
+- Support for customizing the point type through a callback when
+  plotting points and new symbol plugin with some predefined point
+  types (sponsored by Utility Data Corporation).
 
 - New hooks: drawSeries
 
